syntax = "proto3";

package pr_review;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/beer-connoisseur/avito-backend-trainee-assignment-autumn-2025;pr_review";

service PRReviewerService {
  rpc AddTeam(AddTeamRequest) returns (AddTeamResponse) {
    option (google.api.http) = {
      post: "/team/add"
      body: "*"
    };
  }

  rpc GetTeam(GetTeamRequest) returns (GetTeamResponse) {
    option (google.api.http) = {
      get: "/team/get"
    };
  }

  rpc SetUserActive(SetUserActiveRequest) returns (SetUserActiveResponse) {
    option (google.api.http) = {
      post: "/users/setIsActive"
      body: "*"
    };
  }

  rpc GetUserReviews(GetUserReviewsRequest) returns (GetUserReviewsResponse) {
    option (google.api.http) = {
      get: "/users/getReview"
    };
  }

  rpc CreatePullRequest(CreatePullRequestRequest) returns (CreatePullRequestResponse) {
    option (google.api.http) = {
      post: "/pullRequest/create"
      body: "*"
    };
  }

  rpc MergePullRequest(MergePullRequestRequest) returns (MergePullRequestResponse) {
    option (google.api.http) = {
      post: "/pullRequest/merge"
      body: "*"
    };
  }

  rpc ReassignReviewer(ReassignReviewerRequest) returns (ReassignReviewerResponse) {
    option (google.api.http) = {
      post: "/pullRequest/reassign"
      body: "*"
    };
  }
}

enum PRStatus {
  OPEN = 0;
  MERGED = 1;
}

message TeamMember {
  string user_id = 1 [(validate.rules).string = {min_len: 1}];
  string username = 2 [(validate.rules).string = {min_len: 1}];
  bool is_active = 3;
}

message Team {
  string team_name = 1 [(validate.rules).string = {min_len: 1}];
  repeated TeamMember members = 2;
}

message User {
  string user_id = 1 [(validate.rules).string = {min_len: 1}];
  string username = 2 [(validate.rules).string = {min_len: 1}];
  string team_name = 3 [(validate.rules).string = {min_len: 1}];
  bool is_active = 4;
}

message PullRequest {
  string pull_request_id = 1 [(validate.rules).string = {min_len: 1}];
  string pull_request_name = 2 [(validate.rules).string = {min_len: 1}];
  string author_id = 3 [(validate.rules).string = {min_len: 1}];
  PRStatus status = 4;
  repeated string assigned_reviewers = 5 [(validate.rules).repeated.items.string.min_len = 1];
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp merged_at = 7;
}

message PullRequestShort {
  string pull_request_id = 1 [(validate.rules).string = {min_len: 1}];
  string pull_request_name = 2 [(validate.rules).string = {min_len: 1}];
  string author_id = 3 [(validate.rules).string = {min_len: 1}];
  PRStatus status = 4;
}

message Error {
  string code = 1;
  string message = 2;
}

message ErrorResponse {
  Error error = 1;
}

message AddTeamRequest {
  string team_name = 1 [(validate.rules).string = {min_len: 1}];
  repeated TeamMember members = 2;
}

message AddTeamResponse {
  Team team = 1;
}

message GetTeamRequest {
  string team_name = 1 [(validate.rules).string = {min_len: 1}];
}

message GetTeamResponse {
  Team team = 1;
}

message SetUserActiveRequest {
  string user_id = 1 [(validate.rules).string = {min_len: 1}];
  bool is_active = 2;
}

message SetUserActiveResponse {
  User user = 1;
}

message GetUserReviewsRequest {
  string user_id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetUserReviewsResponse {
  string user_id = 1;
  repeated PullRequestShort pull_requests = 2;
}

message CreatePullRequestRequest {
  string pull_request_id = 1 [(validate.rules).string = {min_len: 1}];
  string pull_request_name = 2 [(validate.rules).string = {min_len: 1}];
  string author_id = 3 [(validate.rules).string = {min_len: 1}];
}

message CreatePullRequestResponse {
  PullRequest pr = 1;
}

message MergePullRequestRequest {
  string pull_request_id = 1 [(validate.rules).string = {min_len: 1}];
}

message MergePullRequestResponse {
  PullRequest pr = 1;
}

message ReassignReviewerRequest {
  string pull_request_id = 1 [(validate.rules).string = {min_len: 1}];
  string old_reviewer_id = 2 [(validate.rules).string = {min_len: 1}];
}

message ReassignReviewerResponse {
  PullRequest pr = 1;
  string replaced_by = 2;
}